Added inventory bar and workshop arrows

--- a/main.css
+++ b/main.css
@@ -25,6 +25,38 @@ body {
   color: white;
 }
 
+.shop-ui {
+  height: calc(100% - 70px - 100px);
+}
+
+.workshop-arrow {
+  vertical-align: top;
+  display: inline-block;
+  width: 60px;
+  height: 100%;
+  text-align: center;
+  font-size: 40px;
+  position: relative;
+}
+
+.workshop-arrow:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.workshop-arrow > * {
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 100%;
+}
+
+#workshop {
+  display: inline-block;
+  height: 100%;
+  width: calc(100% - 60px - 70px);
+}
+
 .workshop-row {
   height: 50%;
   width: 100%;
@@ -54,18 +86,27 @@ body {
   vertical-align: top;
 }
 
-.shelf-spot > * {
+.drag-target > * {
   width: 100%;
   height: 100%;
   cursor: grab;
+  position: relative;
 }
 
-.shelf-spot > *:hover {
+.drag-target > *:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-.shelf-spot > *:active {
+.drag-target > *:active {
   cursor: grabbing;
+}
+
+.drag-target > * > * {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .info {
@@ -80,22 +121,42 @@ body {
 }
 
 #inventory-bar {
-  height: 60px;
+  height: 100px;
   width: 80%;
-  background-color: white;
+  background-color: dimgray;
   margin-bottom: 10px;
   display: inline-block;
   text-align: left;
 }
 
 #inventory-slots {
-  width: 80%;
+  width: 60%;
   height: 100%;
   display: inline-block;
+  vertical-align: top;
 }
 
 .inventory-slot {
   width: 10%;
   height: 100%;
   display: inline-block;
+  outline-style: solid;
+  outline-color: black;
+  outline-width: 2px;
+  vertical-align: top;
+}
+
+#control-panel {
+  display: inline-block;
+  width: 39%;
+  height: 100%;
+}
+
+#time-panel {
+  display: inline-block;
+  
+  height: 100%;
+  text-align: right;
+  vertical-align: top;
+  font-size: 25px;
 }
