--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ body {
   height: calc(20% - 10px);
   width: calc(100% - 10px);
   border-style: solid;
-  border-width: 5px;
+  border-width: 0.5vh;
   border-color: #33210C;
   background-color: #9E7B4F;
 }
@@ -121,8 +121,8 @@ body {
 }
 
 #inventory-bar {
-  height: 100px;
   width: 80%;
+  aspect-ratio: 80 / 5;
   background-color: dimgray;
   margin-bottom: 10px;
   display: inline-block;
@@ -154,9 +154,8 @@ body {
 
 #time-panel {
   display: inline-block;
-  
   height: 100%;
   text-align: right;
   vertical-align: top;
-  font-size: 25px;
+  font-size: 3vh;
 }
